--- a/data/glade/UpdateManager.ui
+++ b/data/glade/UpdateManager.ui
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkWindow" id="dialog_cacheprogress">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
@@ -97,12 +96,12 @@
     <property name="skip_pager_hint">True</property>
     <property name="urgency_hint">True</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox5">
+      <object class="GtkBox" id="dialog-vbox5">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">12</property>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area5">
+          <object class="GtkButtonBox" id="dialog-action_area5">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
@@ -229,14 +228,6 @@ This can be caused by:
       <action-widget response="-7">okbutton3</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkImage" id="image-apply">
-    <property name="visible">True</property>
-    <property name="stock">gtk-apply</property>
-  </object>
-  <object class="GtkImage" id="image-refresh">
-    <property name="visible">True</property>
-    <property name="stock">gtk-refresh</property>
-  </object>
   <object class="GtkDialog" id="dialog_manual_update">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
@@ -247,25 +238,25 @@ This can be caused by:
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox4">
+      <object class="GtkBox" id="dialog-vbox4">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">12</property>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area4">
+          <object class="GtkButtonBox" id="dialog-action_area4">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="cancelbutton1">
-		<property name="label" translatable="yes">Chec_k</property>
+                <property name="label" translatable="yes">Chec_k</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="receives_default">False</property>
                 <property name="use_action_appearance">False</property>
- 		<property name="use_underline">True</property>
-     		<property name="image">image-refresh</property>
+                <property name="image">image-refresh</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -391,12 +382,12 @@ Your system does not check for updates automatically. You can configure this beh
     <property name="skip_pager_hint">True</property>
     <property name="urgency_hint">True</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox6">
+      <object class="GtkBox" id="dialog-vbox6">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">12</property>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area6">
+          <object class="GtkButtonBox" id="dialog-action_area6">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
@@ -527,12 +518,12 @@ Your system does not check for updates automatically. You can configure this beh
     <property name="default_height">500</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox33">
+      <object class="GtkBox" id="dialog-vbox33">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">6</property>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area33">
+          <object class="GtkButtonBox" id="dialog-action_area33">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
@@ -583,8 +574,6 @@ Your system does not check for updates automatically. You can configure this beh
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="border_width">6</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">in</property>
             <child>
               <placeholder/>
@@ -602,6 +591,16 @@ Your system does not check for updates automatically. You can configure this beh
       <action-widget response="-6">okbutton1</action-widget>
       <action-widget response="-5">button2</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkImage" id="image-apply">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-apply</property>
+  </object>
+  <object class="GtkImage" id="image-refresh">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-refresh</property>
   </object>
   <object class="GtkWindow" id="window_fetch">
     <property name="can_focus">False</property>
@@ -693,6 +692,9 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="enable_search">False</property>
+                            <child internal-child="selection">
+                              <object class="GtkTreeSelection" id="treeview-selection1"/>
+                            </child>
                           </object>
                         </child>
                       </object>
@@ -965,8 +967,6 @@ Your system does not check for updates automatically. You can configure this beh
                   <object class="GtkScrolledWindow" id="scrolledwindow_update">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">automatic</property>
-                    <property name="vscrollbar_policy">automatic</property>
                     <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTreeView" id="treeview_update">
@@ -981,6 +981,9 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                         <signal name="cursor-changed" handler="on_treeview_update_cursor_changed" swapped="no"/>
                         <signal name="row-activated" handler="on_treeview_update_row_activated" swapped="no"/>
+                        <child internal-child="selection">
+                          <object class="GtkTreeSelection" id="treeview-selection2"/>
+                        </child>
                       </object>
                     </child>
                   </object>
@@ -1027,8 +1030,8 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
                         <property name="position">0</property>
                       </packing>
                     </child>
@@ -1052,8 +1055,8 @@ Your system does not check for updates automatically. You can configure this beh
                           <object class="GtkLabel" id="label_roaming">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="wrap">True</property>
                             <property name="label" translatable="yes">You are connected via roaming and may be charged for the data consumed by this update.</property>
+                            <property name="wrap">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1063,8 +1066,8 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
                         <property name="position">1</property>
                       </packing>
                     </child>
@@ -1098,8 +1101,8 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
                         <property name="position">2</property>
                       </packing>
                     </child>
@@ -1133,8 +1136,8 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
                         <property name="position">3</property>
                       </packing>
                     </child>
@@ -1167,8 +1170,8 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
-                        <property name="fill">True</property>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
                         <property name="position">4</property>
                       </packing>
                     </child>
@@ -1203,13 +1206,13 @@ Your system does not check for updates automatically. You can configure this beh
                         <property name="homogeneous">True</property>
                         <child>
                           <object class="GtkButton" id="button_reload">
-			    <property name="label" translatable="yes">Chec_k</property>
+                            <property name="label" translatable="yes">Chec_k</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-			    <property name="image">image-refresh</property>
-			    <property name="use_underline">True</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="image">image-refresh</property>
+                            <property name="use_underline">True</property>
                             <signal name="clicked" handler="on_button_reload_clicked" swapped="no"/>
                           </object>
                           <packing>
@@ -1220,15 +1223,15 @@ Your system does not check for updates automatically. You can configure this beh
                         </child>
                         <child>
                           <object class="GtkButton" id="button_install">
-			    <property name="label" translatable="yes">_Install Updates</property>
+                            <property name="label" translatable="yes">_Install Updates</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="can_default">True</property>
                             <property name="has_default">True</property>
                             <property name="receives_default">True</property>
-			    <property name="image">image-apply</property>
-			    <property name="use_underline">True</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="image">image-apply</property>
+                            <property name="use_underline">True</property>
                             <signal name="clicked" handler="on_button_install_clicked" swapped="no"/>
                           </object>
                           <packing>
@@ -1285,8 +1288,6 @@ Your system does not check for updates automatically. You can configure this beh
                               <object class="GtkScrolledWindow" id="scrolledwindow_changes">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="hscrollbar_policy">automatic</property>
-                                <property name="vscrollbar_policy">automatic</property>
                                 <property name="shadow_type">in</property>
                                 <child>
                                   <placeholder/>
@@ -1315,8 +1316,6 @@ Your system does not check for updates automatically. You can configure this beh
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="border_width">6</property>
-                            <property name="hscrollbar_policy">automatic</property>
-                            <property name="vscrollbar_policy">automatic</property>
                             <property name="shadow_type">in</property>
                             <child>
                               <object class="GtkTextView" id="textview_descr">
@@ -1438,8 +1437,8 @@ Your system does not check for updates automatically. You can configure this beh
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
                     <property name="use_stock">True</property>
-                    <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                     <accelerator key="W" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                    <accelerator key="Q" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
