--- a/data/gtkbuilder/DistUpgrade.ui
+++ b/data/gtkbuilder/DistUpgrade.ui
@@ -287,7 +287,6 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
   <object class="GtkDialog" id="dialog_conffile">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
-    <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="type_hint">dialog</property>
@@ -446,6 +445,7 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="label_conffile">
+                    <property name="width_chars">60</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0</property>
@@ -482,12 +482,12 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
                 <property name="can_focus">False</property>
                 <child>
                   <object class="GtkScrolledWindow" id="scrolledwindow5">
+                    <property name="height_request">200</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTextView" id="textview_conffile">
-                        <property name="height_request">300</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="editable">False</property>
@@ -496,8 +496,7 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
                     </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
+                    <property name="expand">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -512,8 +511,7 @@ The system could be in an unusable state if you cancel the upgrade. You are stro
             </child>
           </object>
           <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
+            <property name="expand">True</property>
             <property name="position">2</property>
           </packing>
         </child>
